Export org.mockito/org.mockito.internal.creation.bytebuddy to hamcrest.core